--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,32 @@
 {
-  "name": "ACQB Demo",
-  "short_name": "ACQB",
+  "name": "WEAK",
+  "short_name": "WEAK",
   "description": "Demo for Armchair Quarterback",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#fff",
-  "icons": [{
-    "src": "images/logo.png",
-    "sizes": "192x192"
-  }]
+  "background_color": "#73ffb9",
+  "theme_color": "#73ffb9",
+  "oreintation": "landscape",
+  "icons": [
+      {
+        "src": "public/images/logo48.png",
+        "sizes": "48x48",
+        "type": "image/png",
+      },
+      {
+        "src": "public/images/logo96.png",
+        "sizes": "96x96",
+        "type": "image/png",
+      },
+      {
+        "src": "public/images/logo144.png",
+        "sizes": "144x144",
+        "type": "image/png",
+      },
+      {
+        "src": "public/images/logo192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+      }
+    ]
 }
